k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-jai
spec:
  selector:
    matchLabels:
      app: bucket-jai
  replicas: 1
  template:
    metadata:
      labels:
        app: bucket-jai
    spec:
      containers:
      - name: bucket-jai
        image: docker.io/cedricpoon/bucket-jai:alpha
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
