k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bucket-jai
spec:
  selector:
    app: bucket-jai
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
